@@ -1,24 +1,0 @@
-<section class="page-info">
-  <div class="banner" role="banner">
-    {%include banner.html%}
-  </div>
-  <div>
-  {%-if pageDate%}
-    <span>
-    {%-if pageVersion-%}
-      {{-pageVersion-}},
-    {%-else-%}
-      This page is dated on
-    {%-endif%} {{pageDate | date: formDate-}}
-    .</span>
-  {%-elsif pageVersion%}
-    <span>{{pageVersion}}</span>
-  {%-endif-%}
-  {%-if foot-%}
-    {%-if pageDate or pageVersion%}
-    <br />
-    {%-endif%}
-    <span>{{foot}}</span>
-  {%-endif%}
-  </div>
-</section>
