@@ -1,5 +1,5 @@
 <form>
-<details open>
+<details>
 <summary><h3>Text</h3></summary>
 {%include_relative _sections/sections/text.html-%}
 </details>
