@@ -1,60 +1,53 @@
 <section>
   <div class="field row" id="field-filter-hue-rotate">
-    <label for="input-filter-hue-rotate">Hue rotate:</label>
-    <div class="input short">
+    <label for="input-filter-hue-rotate">Hue rotate (°):</label>
+    <div class="input shorter">
       <input id="input-filter-hue-rotate" type="number" min="-360" max="360" />
-      <span>°</span>
     </div>
   </div>
   <div class="field row" id="field-filter-invert">
-    <label for="input-filter-invert">Invert:</label>
-    <div class="input short">
+    <label for="input-filter-invert">Invert (%):</label>
+    <div class="input shorter">
       <input id="input-filter-invert" type="number" min="0" max="100" />
-      <span>%</span>
     </div>
   </div>
   <div class="field row" id="field-filter-saturate">
-    <label for="input-filter-saturate">Saturate:</label>
-    <div class="input short">
+    <label for="input-filter-saturate">Saturate (×):</label>
+    <div class="input shorter">
       <input id="input-filter-saturate" type="number" min="0" max="15" step="0.01" />
-      <span>×</span>
     </div>
   </div>
   <div class="field row" id="field-filter-grayscale">
-    <label for="input-filter-grayscale">Grayscale:</label>
-    <div class="input short">
+    <label for="input-filter-grayscale">Grayscale (%):</label>
+    <div class="input shorter">
       <input id="input-filter-grayscale" type="number" min="0" max="100" />
-      <span>%</span>
     </div>
   </div>
   <div class="field row" id="field-filter-sepia">
-    <label for="input-filter-sepia">Sepia:</label>
-    <div class="input short">
+    <label for="input-filter-sepia">Sepia (%):</label>
+    <div class="input shorter">
       <input id="input-filter-sepia" type="number" min="0" max="100" />
-      <span>%</span>
     </div>
   </div>
   <div class="field row" id="field-filter-contrast">
-    <label for="input-filter-contrast">Contrast:</label>
-    <div class="input short">
+    <label for="input-filter-contrast">Contrast (×):</label>
+    <div class="input shorter">
       <input id="input-filter-contrast" type="number" min="0" max="15" step="0.01" />
-      <span>×</span>
     </div>
   </div>
   <div class="field row" id="field-filter-brightness">
-    <label for="input-filter-brightness">Brightness:</label>
-    <div class="input short">
+    <label for="input-filter-brightness">Brightness (×):</label>
+    <div class="input shorter">
       <input id="input-filter-brightness" type="number" min="0" max="15" step="0.01" />
-      <span>×</span>
     </div>
   </div>
   <div class="field row" id="field-filter-blur">
-    <label for="input-filter-blur">Blur:</label>
-    <div class="input short">
+    <label for="input-filter-blur">Blur (px):</label>
+    <div class="input shorter">
       <input id="input-filter-blur" type="number" min="0" max="127" step="0.1" />
-      <span>px</span>
     </div>
   </div>
+  <p>Order is as shown.</p>
 </section>
 <section>
   <div class="field row space-between" id="field-filter-reset">
