@@ -14,10 +14,9 @@
     </div>
   </div>
   <div class="field row" id="field-media-speed">
-    <label for="input-media-speed">Speed:</label>
+    <label for="input-media-speed">Speed (×):</label>
     <div class="input shorter">
       <input id="input-media-speed" type="number" min="0" max="8" step="0.01" />
-      <span>×</span>
       <div class="field switch" id="field-media-with-pitch">
         <div class="input">
           <input id="input-media-with-pitch" type="checkbox" />
@@ -27,12 +26,12 @@
     </div>
   </div>
   <div class="field row" id="field-media-search">
-    <label>Search:</label>
+    <label>Search (s):</label>
     <div class="input shorter">
-      <button id="button-media-search-n05" type="button">⏪&#xFE0E; −05 s</button>
-      <button id="button-media-search-p05" type="button">+05 s ⏩&#xFE0E;</button>
-      <button id="button-media-search-n20" type="button">⏪&#xFE0E; −20 s</button>
-      <button id="button-media-search-p20" type="button">+20 s ⏩&#xFE0E;</button>
+      <button id="button-media-search-n05" type="button">⏪&#xFE0E; −05</button>
+      <button id="button-media-search-p05" type="button">+05 ⏩&#xFE0E;</button>
+      <button id="button-media-search-n20" type="button">⏪&#xFE0E; −20</button>
+      <button id="button-media-search-p20" type="button">+20 ⏩&#xFE0E;</button>
     </div>
   </div>
 </section>
