@@ -1,8 +1,8 @@
 <section>
-  <div class="group space-between">
+  <div class="group">
     <div class="field row small" id="field-position-align">
       <label for="input-position-align">Align:</label>
-      <div class="input short">
+      <div class="input shorter">
         <select id="input-position-align">
           <option value="flex-start">Start</option>
           <option value="center">Center</option>
@@ -13,7 +13,7 @@
     </div>
     <div class="field row small" id="field-position-justify">
       <label for="input-position-justify">Justify:</label>
-      <div class="input short">
+      <div class="input shorter">
         <select id="input-position-justify">
           <option value="flex-start">Start</option>
           <option value="center">Center</option>
