@@ -24,17 +24,15 @@
     </div>
   </div>
   <div class="field row" id="field-text-font-size">
-    <label for="input-text-font-size">Font size:</label>
-    <div class="input short">
+    <label for="input-text-font-size">Font size (×):</label>
+    <div class="input shorter">
       <input id="input-text-font-size" type="number" min="0" max="15" step="0.01" />
-      <span>em</span>
     </div>
   </div>
   <div class="field row" id="field-text-line-height">
-    <label for="input-text-line-height">Line height:</label>
-    <div class="input short">
+    <label for="input-text-line-height">Line height (×):</label>
+    <div class="input shorter">
       <input id="input-text-line-height" type="number" min="0" max="15" step="0.01" />
-      <span>×</span>
     </div>
   </div>
 </section>
