@@ -6,17 +6,15 @@
     <label for="input-transform-reverse">Reverse</label>
   </div>
   <div class="field row" id="field-transform-rotate">
-    <label for="input-transform-rotate">Rotate:</label>
-    <div class="input short">
+    <label for="input-transform-rotate">Rotate (°):</label>
+    <div class="input shorter">
       <input id="input-transform-rotate" type="number" min="-360" max="360" />
-      <span>°</span>
     </div>
   </div>
   <div class="field row" id="field-transform-scale">
-    <label for="input-transform-scale">Scale:</label>
-    <div class="input short">
+    <label for="input-transform-scale">Scale (×):</label>
+    <div class="input shorter">
       <input id="input-transform-scale" type="number" min="0" max="15" step="0.01" />
-      <span>×</span>
     </div>
   </div>
 </section>
